fixing the code according to the instructions