@@ -4,6 +4,7 @@ import primitives.Point;
 import primitives.Ray;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * An interface representing an intersectable geometry object.
@@ -12,65 +13,83 @@ import java.util.List;
  */
 public abstract class Intersectable {
     /**
-     * Finds the intersections of a given ray with the geometry object.
-     * If no intersections are found, an empty list is returned.
-     *
-     * @param ray The ray to intersect with the geometry object
-     * @return A list of intersection points between the ray and the geometry object
+     * Find all Intersections points from the ray.
+     * @param ray MUST be not null, The ray tested at the intersection of the object
+     * @return List of points that intersection with the object
      */
     public List<Point> findIntersections(Ray ray) {
         List<GeoPoint> geoList = findGeoIntersections(ray);
-        return geoList == null ? null :
-                geoList.stream()
-                        .map(gp -> gp.point)
-                        .toList();
+        List<Point> result = null;
+        if (geoList != null) {
+            result = geoList.stream().map(GeoPoint::getPoint)
+                    .collect(java.util.stream.Collectors.toList());
+        }
+        return result;
     }
 
-    public final List<GeoPoint> findGeoIntersections(Ray ray) {
-        return findGeoIntersectionsHelper(ray);
-    }
-
+    /**
+     * Find all GeoPoints from the ray.
+     * @param ray MUST be not null, The ray tested at the intersection of the object
+     * @return List of GeoPoints that intersection with the object
+     */
     protected abstract List<GeoPoint> findGeoIntersectionsHelper(Ray ray);
 
     /**
-     * Represents a point on a geometry object.
+     * Find the nearest intersection point from the ray.
+     * @param ray MUST be not null, The ray tested at the intersection of the object
+     * @return The nearest point that intersection with the object
+     */
+    public List<GeoPoint> findGeoIntersections(Ray ray) {
+        return findGeoIntersectionsHelper(ray);
+    }
+
+
+    /**
+     * GeoPoint contains the geometry and the point on the geometry.
      */
     public static class GeoPoint {
-        /**
-         * The geometry object.
-         */
         public Geometry geometry;
-
-        /**
-         * The point on the geometry object.
-         */
         public Point point;
 
-        /**
-         * Constructs a new GeoPoint with the specified geometry and point.
-         *
-         * @param geometry the geometry object
-         * @param point    the point on the geometry object
-         */
         public GeoPoint(Geometry geometry, Point point) {
             this.geometry = geometry;
             this.point = point;
         }
 
+        public Geometry getGeometry() {
+            return geometry;
+        }
+
+        public GeoPoint setGeometry(Geometry geometry) {
+            this.geometry = geometry;
+            return this;
+        }
+
+        public Point getPoint() {
+            return point;
+        }
+
+        public GeoPoint setPoint(Point point) {
+            this.point = point;
+            return this;
+        }
+
         @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (!(o instanceof GeoPoint geoPoint)) return false;
-            return geometry.equals(geoPoint.geometry) && point.equals(geoPoint.point);
+        public boolean equals(Object obj) {
+            if (obj == this) {
+                return true;
+            }
+            if (!(obj instanceof GeoPoint)) {
+                return false;
+            }
+            GeoPoint other = (GeoPoint)obj;
+            boolean sameGeometryType = this.geometry.getClass().equals(other.geometry.getClass());
+            return sameGeometryType && this.point.equals(other.point);
         }
 
         @Override
         public String toString() {
-            return "GeoPoint{" +
-                    "geometry=" + geometry +
-                    ", point=" + point +
-                    '}';
+            return "GeoPoint{" + "geometry=" + geometry + ", point=" + point + '}';
         }
-
     }
 }
